# shoply-backend

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  proto-ts.sh  ts-binding.sh
api/: Cargo.toml
api/src/: lib.rs  lib3.rs  model.rs  routes.rs
docker/: docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  member.rs  member_address.rs  member_auth.rs  member_uniq_email.rs  member_uniq_phone.rs  order.rs  order_line.rs  prelude.rs  product.rs  product_variant.rs  product_variant_snapshot.rs  sale.rs  uuid.rs
member-service/: Cargo.toml
member-service/src/: dto.rs  lib.rs  mutation.rs  query.rs
migration/: Cargo.toml
service/: Cargo.toml
service/src/: dto.rs  lib.rs
src/: main.rs
