[package]
name = "shoply-api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]
shoply-service = { path = "../service" }
shoply-member-service = { path = "../member-service" }
tokio = { version = "1.29.0", features = ["full"] }
axum = "0.6"
axum-extra = { version = "0.8", features = [
  "cookie",
  "form",
  "query",
  "multipart",
] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
prost = "0.11"
tonic = { version = "0.9" }
tonic-reflection = "0.9"
tonic-web = { version = "0.9" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
tower-cookies = "0.9.0"
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = "1.0.175"
serde_json = "1.0.102"
tera = "1.17.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
jsonwebtoken = { version = "9" }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["toml"] }

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }
