[package]
name = "shoply-member-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
entity = { path = "../entity" }
shoply-service = { path = "../service" }
serde = { version = "1", features = ["derive"] }
serde_repr = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v7"] }
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9" }
rand = { version = "0" }
ts-rs = { version = "7.0", features = [
  "serde-compat",
  "chrono-impl",
  "uuid-impl",
] }

[dependencies.sea-orm]
version = "0.12.7"
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  # "sqlx-mysql",
  # "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
